app/assets/stylesheets/pages/_pets_show.scss
// Page name is Miels Home

.dashboard-btns {
  display: flex;
  justify-content: space-around;
  padding: 15px;
}

.pet-home-header {
  display: flex;
  align-items: center;
  flex-direction: column;

  .pet-name-home-header {
    padding: 0;
    margin-bottom: 0;
  }
}

.dashboard-btn {
  height: 150px;
  width: 150px;
  border-radius: 10px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 15px;
  border-radius: 10px;
  border: 1px solid #3E1E99;
  box-shadow: 10px 6px white, 10px 6px  0px 1px $d-purple;

  .journal-btn {
    color: white;
  }
}

.pet-show {
  padding-bottom: 20px;
}

.white-bg {
  background-color: white;
  height: 100%;
  width: 100%;
}

